# rosetta

./: .env.example  .gitignore  BACKFILL_IMPLEMENTATION_SUMMARY.md  CODE_CHANGES.md  CONNECTION_POOL_FIX.md  Cargo.toml  Cargo.toml.dev  DEPLOYMENT_CHECKLIST.md  Dockerfile  HOW_TO_RUN.md  PRODUCTION_FIXES_SUMMARY.md  QUICK_FIX_SUMMARY.md  README.md  build.sh  check_enums.py  docker-compose-app.yml  docker-compose.yml  pyproject.toml  test.py
backend/: .env.example  ARCHITECTURE.md  DIAGRAMS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SOURCE_DETAILS.md  README.md  WAL_MONITOR_IMPLEMENTATION.md  alembic.ini  apply_missing_migration.py  convert_to_sync.ps1  convert_to_sync.py  debug_connection.py  pyproject.toml  requirements.txt  test_config.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_wal_monitor.py  003_add_wal_metrics.py  004_add_landing_config.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: backfill.py  configuration.py  credits.py  dashboard.py  destinations.py  health.py  job_metrics.py  pipelines.py  sources.py  (+5 more)
backend/app/core/: __init__.py  config.py  database.py  error_sanitizer.py  exceptions.py  logging.py
backend/app/domain/: __init__.py
backend/app/domain/models/: __init__.py  base.py  credit_snowflake_monitoring.py  data_flow_monitoring.py  destination.py  history_schema_evolution.py  job_metric.py  notification_log.py  pipeline.py  preset.py  queue_backfill.py  source.py  system_metric.py  table_metadata.py  tag.py  wal_metric.py  wal_monitor.py
backend/app/domain/repositories/: __init__.py  backfill.py  base.py  configuration_repo.py  destination.py  job_metric.py  notification_log_repo.py  pipeline.py  preset.py  source.py  system_metric.py  table_metadata_repo.py  tag.py  wal_metric.py  wal_monitor_repo.py
backend/app/domain/schemas/: __init__.py  backfill.py  common.py  configuration.py  credit.py  data_flow_monitoring.py  destination.py  pipeline.py  pipeline_preview.py  preset.py  source.py  source_detail.py  system_metric.py  table_metadata.py  tag.py  wal_metric.py  wal_monitor.py
backend/app/domain/services/: __init__.py  backfill.py  configuration.py  credit_monitor.py  dashboard.py  destination.py  notification_service.py  pipeline.py  preset.py  replication_monitor.py  schema_evolution.py  schema_monitor.py  source.py  system_metric.py  tag.py  wal_monitor.py  wal_monitor_service.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/tasks/: scheduler.py
backend/examples/: api_test.py  wal_monitor_upsert_example.py
backend/scripts/: fix_schema_version_issues.py  verify_schema_monitor.py
backend/tests/: test_compute_health.py
compute/: .env.docker.example  .env.example  .env.high-scale  DLQ_FEATURE.md  DLQ_IMPLEMENTATION_SUMMARY.md  DLQ_QUICK_START.md  main.py  pyproject.toml  requirements.txt  server.py
compute/config/: __init__.py  config.py
compute/core/: __init__.py  backfill_manager.py  database.py  dlq_manager.py  dlq_recovery.py  engine.py  error_sanitizer.py  event_handler.py  manager.py  models.py  notification.py  repository.py  timezone.py
compute/destinations/: __init__.py  base.py  postgresql.py
compute/destinations/snowflake/: __init__.py  client.py  destination.py
compute/docs/: DEBEZIUM_TROUBLESHOOTING.md  PERFORMANCE_ANALYSIS.md  SNOWFLAKE_TIMEOUT_CONFIGURATION.md
compute/examples/: custom_sql_join_example.py  dlq_example.py
compute/scripts/: monitor_performance.py  verify_duckdb_attachment.py
compute/sources/: __init__.py  base.py  postgresql.py
compute/tests/: test_dlq.py  test_health.py  test_notification_log.py  test_notification_log_unit.py
(+195 files in other folders)
