[package]
name = "rosetta"
version = "0.1.0"
edition = "2024"

[dependencies]
# ETL Framework
etl = { git = "https://github.com/supabase/etl" }
duckdb = { version = "1.4.4", features = ["bundled"] }

# Async & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Crypto
jsonwebtoken = "9"
base64 = "0.21"
sha2 = "0.10"            # Untuk hashing fingerprint
rsa = { version = "0.9", features = ["pem", "std"] } # Untuk baca Private Key
pkcs8 = { version = "0.10", features = ["std", "pem", "encryption", "3des"] } # Support encrypted key
spki = "0.7"             # Subject Public Key Info
aes-gcm = "0.10"         # Symmetric Encryption

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = "0.4"
figlet-rs = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
secrecy = "0.10.3"
sysinfo = "0.37.2"
fjall = "3.0.1"
uuid = { version = "1.20.0", features = ["v4"] }

[patch.crates-io]
flate2 = { path = "C:/rust-deps/flate2-1.1.8" }
